--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+*{
+  margin:0%;
+  padding:0%;
+  box-sizing:border-box;
+}
 body {
   background-color: LightSteelBlue;
   text-align: center;
 }
+
 #Jeu {
   display: inline-block;
   background-color: SteelBlue;
@@ -15,8 +21,8 @@ body {
 }
 
 #Jeu button {
-  width: 100px;
-  height: 100px;
+  width: 300px;
+  height: 300px;
   font-weight: bold;
   font-size: 50px;
   margin: 5px;
@@ -29,4 +35,12 @@ body {
   padding: 10px 0;
   text-align: center;
   font-size: 400px;
+}
+
+#reset{
+  width: 300px;
+  height: 300px;
+  font-weight: bold;
+  font-size: 50px;
+  margin: 5px;
 }
